--- a/templates/base.html
+++ b/templates/base.html
@@ -88,12 +88,14 @@
         
         .digital-clock #clock {
             font-size: 1.1rem;
+            color: #1e00ff; /* Blue */
         }
         
         .digital-clock #date {
             font-size: 0.95rem;
             font-weight: normal;
             opacity: 1.0;
+            color: #1e00ff; /* Blue */
         }
         
         /* SIDEBAR */
