--- a/templates/magazzino/pezzoricambio_list.html
+++ b/templates/magazzino/pezzoricambio_list.html
@@ -87,7 +87,7 @@
                             <span class="badge bg-info">{{ articolo.categoria.nome_categoria }}</span>
                         </td>
                         <td>
-                            {{ articolo.unita_misura.codice }}
+                            {{ articolo.unita_misura.denominazione }}
                         </td>
                         <td>
                             {% if articolo.giacenza %}
