--- a/templates/magazzino/modifica_tabella.html
+++ b/templates/magazzino/modifica_tabella.html
@@ -5,6 +5,14 @@
 {% block title %}Modifica Tabella {{ descrizione_tabella }}{% endblock %}
 
 {% block content %}
+
+<style>
+    .table-compact th,
+    .table-compact td {
+        padding: 0.3rem 0.25rem !important;
+        white-space: nowrap;
+    }
+</style>
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
@@ -23,10 +31,10 @@
                         </button>
                     </div>
                 </div>
-                <div class="card-body">
+                <div class="card-body p-0">
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover">
-                            <thead class="table-dark">
+                        <table class="table table-hover table-sm table-compact mb-0">
+                            <thead>
                                 <tr>
                                     {% for campo in campi %}
                                     <th>{{ campo|title }}</th>
